app/src/main/java/com/example/androidmvvm/core/error/DbFailure.kt
package com.example.androidmvvm.core.error

sealed class DbFailure : Failure {

    object IOFailure : DbFailure()
}